--- a/content/post/fitting_data/basic_fitting_routines.ipynb
+++ b/content/post/fitting_data/basic_fitting_routines.ipynb
@@ -31,6 +31,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
