--- a/content/post/fitting_data/basic_fitting_routines.ipynb
+++ b/content/post/fitting_data/basic_fitting_routines.ipynb
@@ -18,11 +18,20 @@
    "source": [
     "In this notebook I show some basic implementation of different Python packages for data fitting. The idea is to learn the different options there are out there so the reader can then study them in more detail if needed. Note that most of this packages have regular updates, so some of the examples shown below might be borken in the future.\n",
     "\n",
-    "This notebook can be opened on [google colab](https://colab.research.google.com/) or [binder](https://mybinder.org/). If using google colab, run the cell below to install the packages (this might take a minute or two). If you use binder, the packages will already be insalled for you.\n",
+    "This notebook can be opened on [google colab](https://colab.research.google.com/) or [binder](https://mybinder.org/). If using google colab, run the first cell below to download the requirements.txt file and then install the packages running the next cell (this might take a minute or two). If you use binder, the packages might already be insalled for you, but if not, run the second cell only.\n",
     "\n",
     "To open this notebook on google colab, click in the following icon: [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/temuller/personal_website/blob/master/content/post/fitting_data/basic_fitting_routines.ipynb)\n",
     "\n",
     "To open this notebook on binder, click in the following icon: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/temuller/personal_website/master?filepath=content%2Fpost%2Ffitting_data%2Fbasic_fitting_routines.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://github.com/temuller/personal_website/blob/master/content/post/fitting_data/requirements.txt"
    ]
   },
   {
